[package]
name = "lukaj"
version = "0.2.0"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "Interactive diff tool for SVG images"
readme = "README.md"
homepage = "https://github.com/adamws/lukaj"
repository = "https://github.com/adamws/lukaj"
keywords = ["diff", "svg", "graphics", "images"]
categories = ["graphics", "multimedia::images"]

[[bin]]
name = "lukaj"
path = "src/main.rs"

[lib]
name = "lukaj"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
sdl2 = { version = "0.36.0", default-features = false, features = ["ttf"] }
cairo-rs = { version = "0.18.2", optional = true }
librsvg = { version = "2.57.0", optional = true }
resvg = { version = "0.36.0", optional = true }
tiny-skia = { version = "0.11.2", optional = true }
usvg = { version = "0.36.0", optional = true }

[features]
default = ["use-usvg"]
use-rsvg = ["cairo-rs", "librsvg"]
use-usvg = ["resvg", "tiny-skia", "usvg"]

# use static linking as much as possible
static-link = ["sdl2/use-vcpkg", "sdl2/static-link"]

[dev-dependencies]
dssim-core = "3.2.7"
image = "0.24.7"
rgb = "0.8.37"
rstest = "0.18.2"

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-ttf"]
git = "https://github.com/microsoft/vcpkg"
rev = "a42af01" # release 2023.11.20

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
